# AeroLang_Demo

./: .gitignore  CMakeLists.txt  COMPLETE_UI_FRAMEWORK.md  CONTRIBUTING.md  DEVELOPMENT_STATUS.md  LICENSE  NOTICE.md  PROGRESS_REPORT.md  PROGRESS_UI_FRAMEWORK.md  PROGRESS_WEEK1.md  PROGRESS_WEEK2.md  PROGRESS_WEEK3.md  README.md  SECURITY.md  SWIPE_GESTURES_COMPLETE.md  UI_FRAMEWORK_100_PERCENT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: background_processing.md  collections.md  custom_gestures.md  getting-started.md  language-spec.md  navigation.md  ui_framework.md
examples/: BackgroundServiceApp.aero  Calculator.aero  CardSwipeApp.aero  CompleteUIDemo.aero  ContactManager.aero  ControlFlowApp.aero  CounterApp.aero  FragmentApp.aero  GestureGameApp.aero  HelloWorld.aero  HelloWorld.cpp  IntentTest.aero  MediaDemo.aero  MultiScreenApp.aero  NotificationApp.aero  PhotoEditorApp.aero  SettingsApp.aero  SocialMediaApp.aero  TagManager.aero  TestFragment.aero  TodoListApp.aero  TodoListUI.aero
include/: AST.h  CodeGenerator.h  Lexer.h  Parser.h  SemanticAnalyzer.h
runtime/: Activity.cpp  Activity.h  AsyncTask.h  Base64.cpp  Base64.h  BroadcastReceiver.cpp  BroadcastReceiver.h  Console.cpp  Console.h  Crypto.cpp  Crypto.h  Database.cpp  Database.h  DateTime.cpp  DateTime.h  File.cpp  File.h  FileIO.cpp  FileIO.h  Fragment.cpp  Fragment.h  FragmentManager.cpp  FragmentManager.h  HttpClient.cpp  HttpClient.h  ImageLoader.cpp  ImageLoader.h  Intent.cpp  Intent.h  JNICache.cpp  JNICache.h  JSON.cpp  JSON.h  Log.cpp  Log.h  Math.cpp  Math.h  NotificationManager.cpp  NotificationManager.h  Path.cpp  (+27 more)
runtime/collections/: List.h  Map.h  Set.h
runtime/hardware/: LocationManager.cpp  LocationManager.h  SensorManager.cpp  SensorManager.h
runtime/media/: Camera.cpp  Camera.h  MediaPlayer.cpp  MediaPlayer.h  MediaRecorder.cpp  MediaRecorder.h  VideoView.cpp  VideoView.h
runtime/ui/: BottomNavigationView.h  Button.h  CardView.h  CheckBox.h  ConstraintLayout.h  CustomGesture.h  DateTimePicker.h  Dialog.h  DrawerLayout.h  EditText.h  FloatingActionButton.h  GestureDetector.h  ImageView.h  LinearLayout.h  ProgressBar.h  RadioButton.h  RecyclerView.h  ScrollView.h  SeekBar.h  Snackbar.h  Spinner.h  SwipeRefreshLayout.h  Switch.h  TabLayout.h  TextView.h  Toast.h  Toolbar.h  VideoView.h  ViewPager.h
src/: AST.cpp  CodeGenerator.cpp  Lexer.cpp  Parser.cpp  SemanticAnalyzer.cpp
tests/: CMakeLists.txt  test_collections.cpp  test_hashmap.cpp  test_lexer.cpp  test_set.cpp
tests/benchmark/: BenchmarkApp.aero
tools/: aero-build  aero-gradle  aero-init  aero-run  aeroc.cpp
tools/gradle-templates/agp8/: app-build.gradle.kts.tmpl  build.gradle.kts.tmpl  settings.gradle.kts.tmpl
tools/gradle-templates/agp9/: app-build.gradle.kts.tmpl  build.gradle.kts.tmpl  settings.gradle.kts.tmpl
vscode-extension/: EMBEDDED_MIRROR.md  H264_STREAMING.md  README.md  SCRCPY_INSTALL.md  extension.js  language-configuration.json  package-lock.json  package.json
vscode-extension/src/: AeroDebugAdapter.js  BuildManager.js  DebugConfigProvider.js  DeviceManager-fix.js  DeviceManager.js  HoverProvider.js  IntelliSenseProvider.js  LogcatViewer.js  ScreenMirrorDaemon.js  ScreenMirrorViewer.js  SourceMapReader.js
vscode-extension/syntaxes/: aerolang.tmLanguage.json
